debugging github actions

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -57,10 +57,12 @@ jobs:
         # Use CMake to "install" build artifacts (only interested in CMake registered targets) to our custom artifacts directory
         run: cmake --install build --config $BUILD_TYPE --prefix artifacts
 
+      -name: Debug
+        shell: bash
+        run: pwd && ls
+        
       - name: Set Tag Name
         shell: bash
-        run: pwd
-        run: ls
         # trim prefix from ref to get tag name
         run: echo "TAG_NAME=${GITHUB_REF#'refs/tags/'}" >> $GITHUB_ENV
 
