--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.12.0)
 project(sound-synth VERSION 0.1.0)
 
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY artifacts)
-set (CMAKE_RUNTIME_OUTPUT_DIRECTORY artifacts)
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/artifacts)
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/artifacts)
 
 # Find and update submodules
 find_package(Git QUIET)
