--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -70,7 +70,7 @@ jobs:
         with:
           type: 'zip'
           path: 'build/artifacts'
-          filename: test.zip
+          filename:  release_${{ env.TAG_NAME }}_${{ matrix.os }}.zip
 
       # - name: Release
       #   uses: softprops/action-gh-release@v1
@@ -78,7 +78,8 @@ jobs:
       #     files: |
       #       test.zip
       - name: Release
-        uses: ncipollo/release-action@v1
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          artifacts: "test.zip"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          files: |
+             release_${{ env.TAG_NAME }}_${{ matrix.os }}.zip
