--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/portaudio"]
 	path = external/portaudio
 	url = https://github.com/PortAudio/portaudio.git
+[submodule "external/qt"]
+	path = external/qt
+	url = git://code.qt.io/qt/qt5.git
