--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,14 +26,14 @@ if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
         endif()
 endif()
 
-if (MSVC)
-    add_compile_options(/W4)
-else ()
-    add_compile_options(-Wall -Wextra -pedantic -g)
-    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-        add_compile_options(-stdlib=libstdc++)
-    endif ()
-endif ()
+# if (MSVC)
+#     add_compile_options(/W4)
+# else ()
+#     add_compile_options(-Wall -Wextra -pedantic -g)
+#     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+#         add_compile_options(-stdlib=libstdc++)
+#     endif ()
+# endif ()
 
 # Add source files
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
