fixed errors and moved to c20

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12.0)
 project(sound-synth VERSION 0.1.0)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/artifacts)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/artifacts)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/artifacts)
@@ -26,14 +26,14 @@ if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
         endif()
 endif()
 
-# if (MSVC)
-#     add_compile_options(/W4)
-# else ()
-#     add_compile_options(-Wall -Wextra -pedantic -g)
-#     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-#         add_compile_options(-stdlib=libstdc++)
-#     endif ()
-# endif ()
+if (MSVC)
+    add_compile_options(/W4 /permissive-)
+else ()
+    add_compile_options(-Wall -Wextra -pedantic -g)
+    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+        add_compile_options(-stdlib=libstdc++)
+    endif ()
+endif ()
 
 # Add source files
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
