--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ if (MSVC)
 else ()
     add_compile_options(-Wall -Wextra -pedantic -g)
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-        add_compile_options(-stdlib=libstdc++)
+        target_compile_options(-stdlib=libstdc++)
     endif ()
 endif ()
 
