--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -13,10 +13,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
-        cxx: [g++, clang++]
+        cxx: [g++-11, clang++]
         include:
           - os: macos-10.15
-            cxx: clang++
+            cxx: g++-11
           - os: windows-2019
             cxx: cl
           - os: windows-2019
@@ -31,7 +31,47 @@ jobs:
         run: |
           echo $GITHUB_WORKSPACE
           mkdir $GITHUB_WORKSPACE/build
+          mkdir $GITHUB_WORKSPACE/artifacts
+      - name: Install toolchain (Linux)
+        if: runner.os == 'Linux' && matrix.cxx == 'g++-11'
+        shell: bash
+        run: |
+          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+          sudo apt-get update
+          sudo apt-get install gcc-11 g++-11
+      - name: Cache MinGW
+        uses: actions/cache@v2
+        id: cache-mingw
+        if: runner.os == 'Windows' && matrix.cxx == 'g++'
+        with:
+          path: gcc
+          key: ${{ runner.os }}-gcc
+      - name: Download toolchain (Windows g++)
+        uses: suisei-cn/actions-download-file@v1
+        id: downloadgcc
+        if: runner.os == 'Windows' && matrix.cxx == 'g++' && steps.cache-mingw.outputs.cache-hit != 'true'
+        with:
+          url: "https://github.com/brechtsanders/winlibs_mingw/releases/download/11.2.0-13.0.0-9.0.0-ucrt-r2/winlibs-x86_64-posix-seh-gcc-11.2.0-mingw-w64ucrt-9.0.0-r2.zip"
+          target: compiler
+      - name: Install toolchain (Windows g++)
+        if: runner.os == 'Windows' && matrix.cxx == 'g++' && steps.cache-mingw.outputs.cache-hit != 'true'
+        shell: bash
+        run: |
+          7z x compiler/winlibs-x86_64-posix-seh-gcc-11.2.0-mingw-w64ucrt-9.0.0-r2.zip -ogcc
+      - name: Configure CMake (Windows g++)
+        if: runner.os == 'Windows' && matrix.cxx == 'g++'
+        env:
+          CXX: ${{ matrix.cxx }}
+        # Use a bash shell so we can use the same syntax for environment variable
+        # access regardless of the host operating system
+        # https://github.com/saxbophone/CPP20-Cross-Platform-Template
+        shell: bash
+        working-directory: ${{ github.workspace }}/build
+        run: |
+          PATH="$(pwd)/../gcc/mingw64/bin:$PATH"
+          CMAKE_GENERATOR=${{ matrix.cmake_generator }} cmake -S $GITHUB_WORKSPACE -B . -DCMAKE_BUILD_TYPE=$BUILD_TYPE
       - name: Configure CMake
+        if: ${{ !(runner.os == 'Windows' && matrix.cxx == 'g++') }}
         env:
           CXX: ${{ matrix.cxx }}
         # Use a bash shell so we can use the same syntax for environment variable
@@ -42,11 +82,9 @@ jobs:
         run: |
           CMAKE_GENERATOR=${{ matrix.cmake_generator }} cmake -S $GITHUB_WORKSPACE -B . -DCMAKE_BUILD_TYPE=$BUILD_TYPE
       - name: Build
-        working-directory: ${{ github.workspace }}/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
-        run: cmake --build . --config $BUILD_TYPE -j4
-
+        run: cmake --build build --config $BUILD_TYPE -j6
       # - name: Install
       #   # working-directory: ${{ github.workspace }}/build
       #   shell: bash
