--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,13 @@
-cmake_minimum_required(VERSION 3.12.0)
+cmake_minimum_required(VERSION 3.15)
 project(sound-synth VERSION 0.1.0)
+
+if(MSVC)
+else()
+  if(WINDOWS)
+    SET(CMAKE_COMPILER_IS_MINGW 1)
+    SET(MINGW 1)
+  endif()
+endif()
 
 set(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/artifacts)
