--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,7 +30,7 @@ jobs:
         shell: bash
         run: |
           echo $GITHUB_WORKSPACE
-          mkdir $GITHUB_WORKSPACE/build
+          mkdir -p $GITHUB_WORKSPACE/build
           mkdir $GITHUB_WORKSPACE/artifacts
       - name: Install toolchain (Linux)
         if: runner.os == 'Linux' && matrix.cxx == 'g++-11'
@@ -39,13 +39,25 @@ jobs:
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test
           sudo apt-get update
           sudo apt-get install gcc-11 g++-11
-      - name: Cache MinGW
+      - name: Cache MinGW and deps (Windows g++)
         uses: actions/cache@v2
         id: cache-mingw
         if: runner.os == 'Windows' && matrix.cxx == 'g++'
         with:
-          path: gcc
+          path: |
+            gcc
           key: ${{ runner.os }}-gcc
+
+      - name: Cache deps
+        uses: actions/cache@v2
+        id: cache-deps
+        with:
+          path: |
+            external
+            build/external
+            .git/modules
+          key: ${{ matrix.os }}-${{ runner.os }}-${{ matrix.cxx }}-${{ hashFiles('.gitmodules') }}
+
       - name: Download toolchain (Windows g++)
         uses: suisei-cn/actions-download-file@v1
         id: downloadgcc
@@ -62,25 +74,22 @@ jobs:
         if: runner.os == 'Windows' && matrix.cxx == 'g++'
         env:
           CXX: ${{ matrix.cxx }}
-        # Use a bash shell so we can use the same syntax for environment variable
-        # access regardless of the host operating system
-        # https://github.com/saxbophone/CPP20-Cross-Platform-Template
         shell: bash
         working-directory: ${{ github.workspace }}/build
         run: |
           PATH="$(pwd)/../gcc/mingw64/bin:$PATH"
           CMAKE_GENERATOR=${{ matrix.cmake_generator }} cmake -S $GITHUB_WORKSPACE -B . -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      
       - name: Configure CMake
         if: ${{ !(runner.os == 'Windows' && matrix.cxx == 'g++') }}
         env:
           CXX: ${{ matrix.cxx }}
-        # Use a bash shell so we can use the same syntax for environment variable
-        # access regardless of the host operating system
-        # https://github.com/saxbophone/CPP20-Cross-Platform-Template
+
         shell: bash
         working-directory: ${{ github.workspace }}/build
         run: |
           CMAKE_GENERATOR=${{ matrix.cmake_generator }} cmake -S $GITHUB_WORKSPACE -B . -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+  
       - name: Build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
