--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,6 +32,7 @@ jobs:
           echo $GITHUB_WORKSPACE
           mkdir -p $GITHUB_WORKSPACE/build
           mkdir $GITHUB_WORKSPACE/artifacts
+
       - name: Install toolchain (Linux)
         if: runner.os == 'Linux' && matrix.cxx == 'g++-11'
         shell: bash
@@ -39,6 +40,7 @@ jobs:
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test
           sudo apt-get update
           sudo apt-get install gcc-11 g++-11
+
       - name: Cache MinGW and deps (Windows g++)
         uses: actions/cache@v2
         id: cache-mingw
@@ -65,11 +67,13 @@ jobs:
         with:
           url: "https://github.com/brechtsanders/winlibs_mingw/releases/download/11.2.0-13.0.0-9.0.0-ucrt-r2/winlibs-x86_64-posix-seh-gcc-11.2.0-mingw-w64ucrt-9.0.0-r2.zip"
           target: compiler
+
       - name: Install toolchain (Windows g++)
         if: runner.os == 'Windows' && matrix.cxx == 'g++' && steps.cache-mingw.outputs.cache-hit != 'true'
         shell: bash
         run: |
           7z x compiler/winlibs-x86_64-posix-seh-gcc-11.2.0-mingw-w64ucrt-9.0.0-r2.zip -ogcc
+
       - name: Configure CMake (Windows g++)
         if: runner.os == 'Windows' && matrix.cxx == 'g++'
         env:
@@ -79,12 +83,11 @@ jobs:
         run: |
           PATH="$(pwd)/../gcc/mingw64/bin:$PATH"
           CMAKE_GENERATOR=${{ matrix.cmake_generator }} cmake -S $GITHUB_WORKSPACE -B . -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-      
+
       - name: Configure CMake
         if: ${{ !(runner.os == 'Windows' && matrix.cxx == 'g++') }}
         env:
           CXX: ${{ matrix.cxx }}
-
         shell: bash
         working-directory: ${{ github.workspace }}/build
         run: |
@@ -92,22 +95,15 @@ jobs:
   
       - name: Build
         shell: bash
-        # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: cmake --build build --config $BUILD_TYPE -j6
-      # - name: Install
-      #   # working-directory: ${{ github.workspace }}/build
-      #   shell: bash
-      #   # Use CMake to "install" build artifacts (only interested in CMake registered targets) to our custom artifacts directory
-      #   run: cmake --install build --config $BUILD_TYPE --prefix artifacts
+
+      - name: Install
+        shell: bash
+        run: cmake --install build --config $BUILD_TYPE --prefix artifacts
 
       - name: Set Tag Name
         shell: bash
-        # trim prefix from ref to get tag name
         run: echo "TAG_NAME=${GITHUB_REF#'refs/tags/'}" >> $GITHUB_ENV
-
-      # - name: Debug
-      #   shell: bash
-      #   run: pwd && tree
 
       - name: Archive Release
         uses: thedoctor0/zip-release@master
