--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,11 +1,8 @@
-name: C++ CI
+name: C++ CMake CI
 
 on:
   push:
-    branches: [libs/sdl] # replace with main (if applicable)
     tags: '*'
-  pull_request:
-    branches: [master] # replace with main (if applicable)
 
 jobs:
   build:
@@ -35,6 +32,7 @@ jobs:
           echo $GITHUB_WORKSPACE
           mkdir -p $GITHUB_WORKSPACE/build
           mkdir $GITHUB_WORKSPACE/artifacts
+
       - name: Install toolchain (Linux)
         if: runner.os == 'Linux' && matrix.cxx == 'g++-11'
         shell: bash
@@ -42,6 +40,7 @@ jobs:
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test
           sudo apt-get update
           sudo apt-get install gcc-11 g++-11
+
       - name: Cache MinGW and deps (Windows g++)
         uses: actions/cache@v2
         id: cache-mingw
@@ -68,61 +67,54 @@ jobs:
         with:
           url: "https://github.com/brechtsanders/winlibs_mingw/releases/download/11.2.0-13.0.0-9.0.0-ucrt-r2/winlibs-x86_64-posix-seh-gcc-11.2.0-mingw-w64ucrt-9.0.0-r2.zip"
           target: compiler
+
       - name: Install toolchain (Windows g++)
         if: runner.os == 'Windows' && matrix.cxx == 'g++' && steps.cache-mingw.outputs.cache-hit != 'true'
         shell: bash
         run: |
           7z x compiler/winlibs-x86_64-posix-seh-gcc-11.2.0-mingw-w64ucrt-9.0.0-r2.zip -ogcc
+
       - name: Configure CMake (Windows g++)
         if: runner.os == 'Windows' && matrix.cxx == 'g++'
         env:
           CXX: ${{ matrix.cxx }}
-        # Use a bash shell so we can use the same syntax for environment variable
-        # access regardless of the host operating system
-        # https://github.com/saxbophone/CPP20-Cross-Platform-Template
         shell: bash
         working-directory: ${{ github.workspace }}/build
         run: |
           PATH="$(pwd)/../gcc/mingw64/bin:$PATH"
           CMAKE_GENERATOR=${{ matrix.cmake_generator }} cmake -S $GITHUB_WORKSPACE -B . -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+
       - name: Configure CMake
         if: ${{ !(runner.os == 'Windows' && matrix.cxx == 'g++') }}
         env:
           CXX: ${{ matrix.cxx }}
-        # Use a bash shell so we can use the same syntax for environment variable
-        # access regardless of the host operating system
-        # https://github.com/saxbophone/CPP20-Cross-Platform-Template
         shell: bash
         working-directory: ${{ github.workspace }}/build
         run: |
           CMAKE_GENERATOR=${{ matrix.cmake_generator }} cmake -S $GITHUB_WORKSPACE -B . -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+  
       - name: Build
         shell: bash
-        # Execute the build.  You can specify a specific target with "--target <NAME>"
-        run: |
-          cat .git/config
-          cmake --build build --config $BUILD_TYPE -j6
+        run: cmake --build build --config $BUILD_TYPE -j6
+
       - name: Install
-        # working-directory: ${{ github.workspace }}/build
         shell: bash
-        # Use CMake to "install" build artifacts (only interested in CMake registered targets) to our custom artifacts directory
         run: cmake --install build --config $BUILD_TYPE --prefix artifacts
 
       - name: Set Tag Name
         shell: bash
-        # trim prefix from ref to get tag name
         run: echo "TAG_NAME=${GITHUB_REF#'refs/tags/'}" >> $GITHUB_ENV
 
       - name: Archive Release
         uses: thedoctor0/zip-release@master
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           type: 'zip'
-          path: artifacts
-          filename: release_${{ env.TAG_NAME }}_${{ matrix.os }}_${{ matrix.cxx }}.zip
+          path: 'artifacts'
+          filename:  ${{ env.TAG_NAME }}_${{ matrix.os }}_${{ matrix.cxx }}.zip
+          
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            release_${{ env.TAG_NAME }}_${{ matrix.os }}_${{ matrix.cxx }}.zip
+             ${{ env.TAG_NAME }}_${{ matrix.os }}_${{ matrix.cxx }}.zip
