--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,11 @@ project(sound-synth VERSION 0.1.0)
 if(MSVC)
 else()
   if(WINDOWS)
-    SET(CMAKE_COMPILER_IS_MINGW 1)
-    SET(MINGW 1)
+    SET(CMAKE_COMPILER_IS_MINGW TRUE)
+    SET(MINGW TRUE)
+    SET(CMAKE_COMPILER_IS_GNUCC TRUE)
+    SET(USE_GCC TRUE)
+    SET(SDL_DIRECTX FALSE)
   endif()
 endif()
 
